# fastapi-profiling-example

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .releaserc  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: pr.yaml  release.yaml
src/app/: constants.py  main.py
src/app/bike/: bike.py
src/app/car/: car.py
src/app/scooter/: scooter.py
src/app/utility/: utils.py
src/tests/unit/: test_placeholder.py
